# vid_dup_finder_lib

./: .gitignore  .zshenv  Cargo.toml  README.md
.github/workflows/: build.yaml  main.yml
examples/: example.rs
ffmpeg_cmdline_utils/: Cargo.toml  LICENSE-APACHE  README.md
ffmpeg_cmdline_utils/src/: ffmpeg_error_kind.rs  ffmpeg_ops.rs  ffmpeg_stats.rs  lib.rs
ffmpeg_gst_wrapper/: Cargo.toml
ffmpeg_gst_wrapper/src/: lib.rs
generic_filesystem_cache/: Cargo.toml  README.md
generic_filesystem_cache/src/: base_fs_cache.rs  errors.rs  processing_fs_cache.rs
src/: dct_hasher.rs  definitions.rs  lib.rs
src/utils/: dct_ops.rs  mod.rs
src/video_hashing/: distance.rs  hash_creation_error_kind.rs  mod.rs  search.rs  video_dup_finder.rs  video_hash.rs  video_stats.rs
src/video_hashing/matches/: match_group.rs
tests/: test_find_all.rs
vid_dup_finder_app/: Cargo.toml  LICENSE-MIT  LICENSE.TXT  README.md  build.rs  cache.tmp
vid_dup_finder_app/comment/: Cargo.toml
vid_dup_finder_app/comment/src/: lib.rs
vid_dup_finder_app/src/: canny_thresholds.rs  main.rs
vid_dup_finder_app/src/app/: app_cfg.rs  app_fns.rs  arg_parse.rs  arg_parse_template.txt  disjoint_set.rs  errors.rs  match_db.rs  match_group_ext.rs  mod.rs  resolution_thunk.rs  search_output.rs
vid_dup_finder_app/src/app/gui/: gui_state.rs  gui_thumbnail_set.rs  gui_zoom.rs  mod.rs  run_gui.rs
vid_dup_finder_app/src/app/gui_slint/: lru_cache.rs  mod.rs  modulo.rs  prerender.rs  vlc_thread.rs
vid_dup_finder_app/src/comment_fix_issue_1/: Cargo.toml.bak
vid_dup_finder_app/src/comment_fix_issue_1/src/: atom.rs  blanklines.rs  c.rs  config.rs  lib.rs  shell.rs  xml.rs
vid_dup_finder_app/src/video_hash_filesystem_cache/: cache_metadata.rs  errors.rs  file_hash_filesystem_cache.rs  file_projection.rs  filename_pattern.rs  generic_cache_if.rs  mod.rs  video_hash_filesystem_cache.rs
vid_dup_finder_app/src/video_hash_filesystem_cache/generic_filesystem_cache/: base_fs_cache.rs  cache_interface.rs  errors.rs  mod.rs  processing_fs_cache.rs
vid_dup_finder_app/ui/: main_window.slint  thunk_entry.slint
vid_dup_finder_common/: Cargo.toml
vid_dup_finder_common/src/: compositing.rs  crop.rs  lib.rs  resize_gray.rs  resize_rgb.rs  video_frames_gray.rs  video_frames_rgb.rs
vid_dup_finder_common/src/motioncrop/: autocrop_frames.rs  darkest_frame.rs  frame_change.rs  mod.rs  test.rs  utils.rs
vid_dup_finder_lib/: Cargo.toml  README.md
vid_dup_finder_lib/bench/: bench.rs
vid_dup_finder_lib/bench/crop-center/: create_crop.sh
vid_dup_finder_lib/bench/crop-horiz/: create_crop.sh
vid_dup_finder_lib/bench/crop-vert/: create_crop.sh
vid_dup_finder_lib/bench/watermark/: create_watermark.sh
vid_dup_finder_lib/examples/: example.rs  obtain_videos.sh
vid_dup_finder_lib/examples/vids/: cat.3.webm  dog.3.webm
vid_dup_finder_lib/src/: definitions.rs  lib.rs
vid_dup_finder_lib/src/video_hashing/: dct_3d.rs  hash_creation_error_kind.rs  match_group.rs  mod.rs  raw_dct_ops.rs  search_algorithm.rs  video_dup_finder.rs  video_hash.rs  video_hash_builder.rs
vid_dup_finder_lib/src/video_hashing/matches/: match_group.rs  mod.rs
vid_dup_finder_lib/tests/: test_find_all.rs
vid_frame_iter/: Cargo.toml
vid_frame_iter/src/: extras.rs  frame_iter.rs  lib.rs  mediainfo_utils.rs
video_hash_filesystem_cache/: .gitignore  Cargo.toml  README.md
video_hash_filesystem_cache/src/: cache_metadata.rs  errors.rs  file_projection.rs  generic_cache_if.rs  lib.rs  video_hash_filesystem_cache.rs
