[package]
name = "vid_dup_finder_lib"
version = "0.1.1"
edition = "2018"
license = "MIT OR Apache-2.0"
description = "a library to find near-duplicate video files"
repository = "https://github.com/Farmadupe/vid_dup_finder_app"
keywords = ["video", "duplicate", "phash", "perceptual", "hash"]
categories = ["multimedia::video"]

[features]
"app_only_fns" = []

[lib]
name = "vid_dup_finder_lib"
path = "src/lib.rs"    
crate-type = ["lib"]

[[test]]
name = "test_find_all"

[[example]]
name = "example"
test = true


[dependencies]
ffmpeg_cmdline_utils = "0.1.2"
rayon = "1.5"
thiserror = "1.0"
rand = "0.8"
image = "0.24"
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0"
rustdct = "0.6"
transpose = "0.2"


[dev-dependencies]
itertools = "0.10"