[workspace]
members = [
  "vid_dup_finder_app",
  "vid_dup_finder_common",
  "vid_dup_finder_lib",
  "vid_frame_iter",
  "ffmpeg_cmdline_utils",
  "ffmpeg_gst_wrapper"
]
resolver = "2"


#[profile.test]
#opt-level = 3

[profile.dev]
debug = true
debug-assertions = true
incremental = false
lto = false
opt-level = 0

[profile.release]
codegen-units = 1
lto = "fat"
incremental = false
opt-level = 3
panic = "abort"
strip = "symbols"

[profile.fastbuild]
inherits = "release"
opt-level = 2
lto=false
debug-assertions = true
overflow-checks = true
incremental = true
debug = true
