[package]
name = "generic_filesystem_cache"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "a cache for slow-to-compute information based on the state of on-disk objects. Includes capability to update entries based on the last-modified-time attribute"
repository = "https://github.com/Farmadupe/generic_filesystem_cache"

[lib]
crate-type = ["lib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] } 
thiserror = "1.0"
bincode = "1.3"
log = "0.4"
parking_lot = "0.12"
