
[package]
authors = ["Farmadupe"]
categories = ["command-line-utilities", "multimedia", "visualization"]
description = "A command line application (and linux-only gui) to find duplicate video files"
edition = "2021"
keywords = ["video", "duplicate", "phash", "perceptual", "hash"]
license = "MIT OR Apache-2.0"
name = "vid_dup_finder"
repository = "https://github.com/Farmadupe/vid_dup_finder"
version = "0.2.1"

[features]
debug_hash_generation = []
gui = ["libc", "gtk4", "gio", "glib", "gdk-pixbuf", "gdk4", "sha2", "regex", "lazy_static"]
parallel_loading = ["rayon", "video_hash_filesystem_cache/parallel_loading"]
ffmpeg_backend = [
    "vid_dup_finder_lib/ffmpeg_backend",
    "video_hash_filesystem_cache/ffmpeg_backend",
    "ffmpeg_gst_wrapper/ffmpeg_backend"
]
gstreamer_backend = [
    "vid_dup_finder_lib/gstreamer_backend",
    "video_hash_filesystem_cache/gstreamer_backend",
    "ffmpeg_gst_wrapper/gstreamer_backend"
]
default = ["gstreamer_backend"]
print_timings = []

[[bin]]
name = "vid_dup_finder"

[dependencies]
ffmpeg_gst_wrapper = {path = "../ffmpeg_gst_wrapper", default-features = false}
bincode = "1.3"
clap = {version = "4.1.1", features=["derive", "cargo", "string"]}
comment = { git = "https://github.com/Farmadupe/comment", rev = "cafa8e4eedb423e5b6e3c8601a8f582f6457ddcc" }
directories-next = "2.0"
image = {version = "0.24", default-features = false}
vid_dup_finder_common = {path = "../vid_dup_finder_common"}
vid_dup_finder_lib = {path = "../vid_dup_finder_lib", version = "0.2", default-features = false}

video_hash_filesystem_cache = {path = "../video_hash_filesystem_cache", version = "0.1", default-features = false}
imageproc = "0.23"
itertools = "0.12"
log = "0.4"
rand = "0.8"
rusttype = "0.9"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
shell-words = "1.0"
simplelog = "0.12"
thiserror = "1.0"
walkdir = "2"




# Gui
gdk4 = {version = "0.7", optional = true}
gdk-pixbuf = {version = "0.18", optional = true}
gio = {version = "0.18", optional = true}
glib = {version = "0.18", optional = true}
gtk4 = {version = "0.7", optional = true}
lazy_static = {version = "1.4", optional = true}
libc = {version = "0.2", optional = true}
regex = {version = "1.5", optional = true}
sha2 = {version = "0.10", optional = true}

# Parallel loading
rayon = {version = "1.5", optional = true}




[dev-dependencies]
chrono = "0.4"
