[package]
authors = ["Farmadupe"]
categories = ["command-line-utilities", "multimedia", "visualization"]
description = "A command line application (and linux-only gui) to find duplicate video files"
edition = "2021"
keywords = ["video", "duplicate", "phash", "perceptual", "hash"]
license = "MIT OR Apache-2.0"
name = "vid_dup_finder"
repository = "https://github.com/Farmadupe/vid_dup_finder"
version = "0.2.1"

[features]
debug_hash_generation = []
gui = [
    "dep:libc",
    "dep:gtk4",
    "dep:gio",
    "dep:glib",
    "dep:gdk-pixbuf",
    "dep:gdk4",
    "dep:sha2",
    "dep:regex",
    "dep:lazy_static",
]
parallel_loading = ["rayon"]
ffmpeg_backend = [
    "vid_dup_finder_lib/ffmpeg_backend",
    "vid_dup_finder_lib/app_only_fns",
    "ffmpeg_gst_wrapper/ffmpeg_backend",
]
gstreamer_backend = [
    "vid_dup_finder_lib/gstreamer_backend",
    "vid_dup_finder_lib/app_only_fns",
    "ffmpeg_gst_wrapper/gstreamer_backend",
]
default = ["parallel_loading", "ffmpeg_backend", "gui"]
print_timings = []

[[bin]]
name = "vid_dup_finder"

[dependencies]
vid_dup_finder_lib = { path = "../vid_dup_finder_lib", version = "0.2" }
vid_dup_finder_common = { path = "../vid_dup_finder_common" }
ffmpeg_gst_wrapper = { path = "../ffmpeg_gst_wrapper", default-features = false }
bincode = "1.3"
clap = { version = "4.1.1", features = ["derive", "cargo", "string"] }
comment_fix_issue_1 = { path = "comment" }
directories-next = "2.0"
image = { version = "0.24", default-features = false }
imageproc = "0.23"
itertools = "0.12"
log = "0.4"
rand = "0.8"
rusttype = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shell-words = "1.0"
simplelog = "0.12"
thiserror = "1.0"
walkdir = "2"
parking_lot = "0.12"
cfg-if = "1.0"


[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.5"


# Gui
gdk4 = { version = "0.7", optional = true }
gdk-pixbuf = { version = "0.18", optional = true }
gio = { version = "0.18", optional = true }
glib = { version = "0.18", optional = true }
gtk4 = { version = "0.7", optional = true }
lazy_static = { version = "1.4", optional = true }
libc = { version = "0.2", optional = true }
regex = { version = "1.5", optional = true }
sha2 = { version = "0.10", optional = true }

# Parallel loading
rayon = { version = "1.5", optional = true }


[dev-dependencies]
chrono = "0.4"
