[package]
edition = "2021"
name = "vid_frame_iter"
version = "0.1.0"

[lib]
crate-type = ["lib"]
name = "vid_frame_iter"

[dependencies]
gdk = "0.18"
gio = "0.18"
glib = {version = "0.18"}
gstreamer = "0.21"
gstreamer-app = {version = "0.21"}
gstreamer-base = "0.21"
gstreamer-pbutils = "0.21"
gstreamer-video = "0.21"
image = {version = "0.24", default-features = false}
thiserror = "1.0"


[features]
"app_only_fns" = []
"test-util" = []
#"default" = []


[dev-dependencies]
url="2"

