[package]
license = "MIT OR Apache-2.0"
edition = "2021"
name = "vid_frame_iter"
version = "0.2.1"
repository = "https://github.com/Farmadupe/vid_dup_finder_lib"
description = "a library to iterate over files, using gstreamer"

[lib]
crate-type = ["lib"]
name = "vid_frame_iter"

[dependencies]
glib = { version = "0.20" }
gstreamer = "0.23"
gstreamer-app = { version = "0.23" }
gstreamer-pbutils = "0.23"
gstreamer-video = "0.23"
image = { version = "0.25", default-features = false }


[features]
"app_only_fns" = []
"test-util" = []
#"default" = []


[dev-dependencies]
url = "2"
