[package]
authors = ["Farmadupe"]
categories = ["caching"]
description = "A companion cache for storing the video hashes used by the vid_dup_finder_lib crate"
edition = "2021"
keywords = ["cache", "vid_dup_finder"]
license = "MIT OR Apache-2.0"
name = "video_hash_filesystem_cache"
repository = "https://github.com/Farmadupe/video_hash_filesystem_cache"
version = "0.1.0"

[lib]
crate-type = ["lib"]
name = "video_hash_filesystem_cache"
path = "src/lib.rs"

[features]
#default = ["parallel_loading"]
parallel_loading = ["rayon"]
ffmpeg_backend=["vid_dup_finder_lib/ffmpeg_backend"]
gstreamer_backend=["vid_dup_finder_lib/gstreamer_backend"]

[dependencies]
bincode = "1.3"
generic_filesystem_cache = {path = "../generic_filesystem_cache", version = "0.1"}
vid_dup_finder_lib = {path = "../vid_dup_finder_lib", version = "0.2", default-features = false, features = ["app_only_fns"]}
itertools = "0.10"
log = "0.4"
rand = "0.8"
rayon = {version = "1.5", optional = true}
serde = {version = "1.0", features = ["derive"]}
thiserror = "1.0"
walkdir = "2"

[dev-dependencies]
chrono = "0.4"


